<resources>
    <string name="app_name">"Project 1 Dev.F "</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_app_name">FRISKA</string>
    <string name="text_hint_user_name">User Name</string>
    <string name="text_hint_password">Password</string>
    <string name="text_btn_creat_acount">Create an Account</string>
    <string name="forgot_password">I forgot password?</string>
    <string name="title_whatsong">WhatSong</string>
    <string name="text_name_shorcount">Name yout shorcout</string>
    <string name="text_acesse_e_visualize">Accesse a visualize suas informacoes</string>
    <string name="text_checkbox_minha_conta">Lembra estabelecimiento e nome de usuario</string>
    <string name="text_hint_num_estable">N° estabelecimiento comercial</string>
    <string name="text_hint_nome_usuario">Nome de usuario</string>
    <string name="text_hint_senha">Senha</string>
    <string name="text_btn_enter">ENTRAR</string>
    <string name="text_esqueci_senha">ESQUECI A SENHA</string>
    <string name="text_esqueci_usuario">ESQUECI O NOME DE USUARIO</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="text_message_forgot_password">Forgot Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="text_btn_login">Login</string>
    <string name="text_message_full_fields">Favor de llenar todos los campos</string>
    <string name="text_home">Home</string>
    <string name="text_hint_fist_name">First Name</string>
    <string name="text_hint_last_name">Last Name</string>
    <string name="text_hint_confirm_password">Corfirm Password</string>
    <string name="text_hint_phone_number">Phone Nummber</string>
    <string name="text_hint_email_adress">Email Adress</string>
    <string name="text_strong">Strong</string>
    <string name="text_raading">Reading</string>

</resources>
