<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/doctors" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blur"/>

    <TextView
        android:id="@+id/textViewTitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="128sp"
        android:text="@string/title_app_name"
        android:textSize="72sp"
        android:textStyle="bold" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitleLogin"
        android:layout_marginLeft="@dimen/margin_edittext_login"
        android:layout_marginRight="@dimen/margin_edittext_login"
        android:layout_marginTop="24dp">

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_user_name"
            android:inputType="textPersonName"
            android:padding="@dimen/paddin_edittext_login" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutUserName"
        android:layout_marginLeft="@dimen/margin_edittext_login"
        android:layout_marginRight="@dimen/margin_edittext_login"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_password"
            android:inputType="textPassword"
            android:padding="@dimen/paddin_edittext_login" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textInputLayoutPassword"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_password" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_btn_create_count"
        android:padding="24dp"
        android:text="@string/text_btn_creat_acount" />


</RelativeLayout>