<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/blur_whatsong" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/textView"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="64dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/whatsong_icon" />

            <com.example.sati.project1devf.cutomviews.CutomTextViewWhatSong
                android:id="@+id/textViewTitleWhatSong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_whatsong"
                android:textSize="32sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_name_shorcount"
                    android:inputType="textPersonName"
                    android:padding="@dimen/paddin_edittext_login" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerMusicProvider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:padding="8dp" />

            <Spinner
                android:id="@+id/spinnerIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:padding="8dp" />

        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_margin="16dp"
        android:src="@mipmap/ic_add_grey600_48dp"
        app:backgroundTint="@color/floatingButoon"
        app:borderWidth="0dp"
        app:elevation="4dp"
        app:fabSize="normal"
        app:pressedTranslationZ="8dp" />


</FrameLayout>